Create helm repo
Signed-off-by: Kristian Escher <kristian.escher@ifne.eu>

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
-theme: jekyll-theme-cayman
+title: Helm Hub
+description: A testing Helm Hub
+theme: jekyll-theme-minimal
+url: "https://MlsnyLisiak.github.io/helm-hub/"
+repo_name: lisiakcloud
+exclude:
+- Gemfile
+- Gemfile.lock
+- .gitignore
